--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "app": "^0.1.0",
     "axios": "^0.19.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "src": "^1.1.2",
-    "utils": "^0.3.1"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.43",
