--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An experimental alternative approach to React Concurrent Mode Experimental Suspense component",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "hot": "NODE_ENV=development parcel ./src/index.html --no-autoinstall"
   },
   "repository": {
@@ -23,9 +23,19 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^10.4.7",
+    "@types/jest": "^26.0.5",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "babel-jest": "^26.1.0",
+    "jest": "^26.1.0",
     "parcel-bundler": "^1.12.4",
+    "ts-jest": "^26.1.3",
     "typescript": "^3.9.6"
   }
 }
