add aliases via babel

--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,14 @@
     "@babel/preset-env",
     "@babel/preset-react",
     "@babel/preset-typescript"
+  ],
+  "plugins": [
+    ["module-resolver", {
+      "root": ["."],
+      "alias": {
+        "src": "./src",
+        "underscore": "lodash"
+      }
+    }]
   ]
 }
