--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "suspender": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
@@ -33,6 +34,7 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "babel-jest": "^26.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "jest": "^26.1.0",
     "parcel-bundler": "^1.12.4",
     "ts-jest": "^26.1.3",
