--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
-    "module": "esnext",
     "baseUrl": ".",
     "paths": {
-      "*": ["./src/*"],
+      "src": ["./src"],
     },
+    "outDir": "dist",
+    "module": "esnext",
     "esModuleInterop": true,
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017"],
