--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "include": ["src"],
+  "include": ["src", "rtl.setup.js"],
   "exclude": ["node_modules", "dist", "rollup.config.js"]
 }
