--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,7 @@
       "root": ["."],
       "alias": {
         "src": "./src",
-        "underscore": "lodash"
+        "lib": "./lib"
       }
     }]
   ]
