--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch",
-    "hot": "NODE_ENV=development parcel ./src/index.html --no-autoinstall"
+    "hot": "NODE_ENV=development parcel ./src/index.html --no-autoinstall",
+    "prepare": "tsc && echo 'Finished building NPM package'"
   },
   "repository": {
     "type": "git",
