update publish scripts

--- a/tsconfig.npm.json
+++ b/tsconfig.npm.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig",
   "include": ["lib"],
-  "exclude": ["node_modules", "dist", "src"]
+  "exclude": ["node_modules", "dist", "src", "./index.html"]
 }
